# tree-splitting-llm

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg  test_package.py
.github/workflows/: python-package.yml
example/: airline_routes_swagger.json
package/: __init__.py  __main__.py  module.py
tree_splitter_llm/: utils.py
