[project]
name = "tree-splitting-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anytree>=2.13.0",
    "openai>=1.74.0",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
